# server/app.js
@@ -21,7 +21,9 @@ mongoose
 
 // Routes
 const ProductRoute = require("./routes/product.route");
+const CartRoute = require("./routes/cart.route");
 app.use("/api/product", ProductRoute);
+app.use("/api/cart", CartRoute);
 
 //PORT
 const PORT = process.env.PORT || 3000;
